Fixing a small layout problem with sidenote.css

--- a/blog/sidenote.css
+++ b/blog/sidenote.css
@@ -7,7 +7,7 @@ body {
     font-family:'Nunito', sans-serif;
     font-size:16px;
     background: #EFF3F6;
-    left-margin:3%;
+    margin-left:1.5em;
 }
 
 div {
